--- a/galaxy/ansible/rabbitmq.yml
+++ b/galaxy/ansible/rabbitmq.yml
@@ -8,7 +8,7 @@
     erlang_apt_repository: "deb [signed-by=/etc/apt/trusted.gpg.d/erlang-E495BB49CC4BBE5B.gpg] https://ppa1.rabbitmq.com/rabbitmq/rabbitmq-erlang/deb/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} main"
     erlang_apt_gpg_url: https://github.com/rabbitmq/signing-keys/releases/download/3.0/cloudsmith.rabbitmq-erlang.E495BB49CC4BBE5B.key
   roles:
-      - role: galaxy-rabbitmq
+    - role: geerlingguy.rabbitmq
   tasks:
     - name: Enable rabbitmq management plugin
       rabbitmq_plugin:
