--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,6 @@ before_install:
 
 
   # start building this repo
-  - git submodule update --init --recursive
   - sudo chown 1450 /tmp && sudo chmod a=rwx /tmp
   - export WORKING_DIR="$TRAVIS_BUILD_DIR"
   - export DOCKER_RUN_CONTAINER="quay.io/bgruening/galaxy"
@@ -109,7 +108,7 @@ script:
   - docker_run -d --name httpstest -p 443:443 -e "USE_HTTPS=True" $DOCKER_RUN_CONTAINER
 
   - sleep 180s && curl -v -k --fail https://127.0.0.1:443/api/version
-  - echo | openssl s_client -connect 127.0.0.1:443 2>/dev/null | openssl x509 -issuer -noout| grep selfsigned
+  - echo | openssl s_client -connect 127.0.0.1:443 2>/dev/null | openssl x509 -issuer -noout| grep localhost
 
   - docker logs httpstest && docker stop httpstest && docker rm httpstest
 
