--- a/galaxy/ansible/group_vars/all.yml
+++ b/galaxy/ansible/group_vars/all.yml
@@ -16,11 +16,8 @@ galaxy_pbs: false
 galaxy_k8s_jobs: false
 galaxy_supervisor: true
 galaxy_root: true
-galaxy_extra_dependencies: false
 galaxy_job_metrics: true
 galaxy_scripts: true
-galaxy_ssl: false
-galaxy_ssl_method: self-signed  # This may be 'own', 'self-signed' or 'letsencrypt'
 galaxy_domain: "localhost"  # This is used by letsencrypt and Interactive Tools, set it to the domain name under which galaxy can be reached
 galaxy_startup: true
 galaxy_rabbitmq: true
@@ -169,8 +166,8 @@ galaxy_it_fetch_neo: false
 galaxy_it_neo_image: quay.io/sanbi-sa/neo_ie:3.1.9
 
 # Nginx configuration.
-nginx_conf_path: /etc/nginx/nginx.conf
-nginx_conf_directory: /etc/nginx/conf.d
+nginx_conf_dir: /etc/nginx
+nginx_conf_file: "{{ nginx_conf_dir }}/nginx.conf"
 
 # Use nginx_*_location variables to control serving apps at subdirectories.
 # If galaxy should be served at subdirectory (e.g. example.com/galaxy) set nginx_galaxy_location: /galaxy
@@ -190,29 +187,35 @@ nginx_welcome_path: "/etc/galaxy/web"
 galaxy_errordocs_dest: "/root"
 
 #web security
-nginx_use_passwords: False
+nginx_use_passwords: false
 nginx_htpasswds:
   - "admin:WiBKbsJTSQ8dc"
-nginx_use_remote_header: False
+nginx_use_remote_header: true
 
 # Additional configurations to be appended to nginx config
 nginx_additional_config : []
 
-# Configure proxy to planemo-machine-web.
-nginx_serve_planemo_machine_web: false
+nginx_proxy_gunicorn: true
 nginx_proxy_reports: true
 nginx_proxy_rabbitmq_management: true
 nginx_proxy_flower: true
 nginx_proxy_interactive_tools: true
 
-nginx_ssl_certificate_key: /etc/ssl/private/nginx.key
-nginx_ssl_certificate: /etc/ssl/private/nginx.crt
-
-# Here you can set a path to a pair of ssl keys
-# These will be copied if galaxy_ssl_method is set to 'own'
-# This defaults to a set of self-generated keys
-src_nginx_ssl_certificate_key: nginx_sample.key
-src_nginx_ssl_certificate: nginx_sample.crt
+# Certbot Configuration.
+certbot_dir: "{{ galaxy_venv_dir }}"
+certbot_auto_renew_hour: "{{ 23 |random(seed=inventory_hostname)  }}"
+certbot_auto_renew_minute: "{{ 59 |random(seed=inventory_hostname)  }}"
+certbot_auth_method: --webroot
+certbot_install_method: virtualenv
+certbot_auto_renew: yes
+certbot_auto_renew_user: root
+certbot_environment: production
+certbot_well_known_root: "{{ nginx_conf_dir }}/_well-known_root"
+certbot_share_key_users:
+  - "{{ galaxy_user_name }}"
+certbot_post_renewal: |
+    supervisorctl restart nginx || true
+certbot_agree_tos: --agree-tos
 
 ## Proftp Configuration.
 proftpd_conf_path:  /etc/proftpd/proftpd.conf
