--- a/galaxy/ansible/requirements.yml
+++ b/galaxy/ansible/requirements.yml
@@ -23,4 +23,9 @@ roles:
   - name: galaxyproject.tusd
     src: https://github.com/galaxyproject/ansible-role-tusd
     version: e009b498a7989d8002c6a5d104176295d63e9fae
- 
+  - name: galaxyproject.nginx
+    version: 0.7.1
+  - name: usegalaxy_eu.certbot
+    version: 0.1.11
+  - name: galaxyproject.self_signed_certs
+    version: 0.0.3
