--- a/galaxy/ansible/slurm.yml
+++ b/galaxy/ansible/slurm.yml
@@ -11,9 +11,23 @@
       StateSaveLocation: /tmp/slurm
       ReturnToService: 1
   roles:
-    - role: galaxyproject.repos
     - role: galaxyproject.slurm
+    # - role: galaxyproject.repos
   tasks:
+    # The ppa repository addition task from galaxyproject.repos role is not working
+    # after setting "APT::Install-Recommends" to false by default. Hence, added the task manually.
+    # FAILED! => {"changed": false, "msg": "Failed to update apt cache: E:The repository 'http://ppa.launchpad.net/natefoo/slurm-drmaa/ubuntu sid Release' does not have a Release file."}
+    - name: Import the GPG signing key for the PPA
+      apt_key:
+        url: "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x8DE68488997C5C6BA19021136F2CC56412788738"
+        state: present
+
+    - name: Add PPA repository for Slurm-DRMAA
+      apt_repository:
+        repo: "deb https://ppa.launchpadcontent.net/natefoo/slurm-drmaa/ubuntu {{ ansible_distribution_release }} main"
+        state: present
+        update_cache: yes
+
     - name: Install slurm-drmaa package
       package:
         name: slurm-drmaa1
@@ -49,3 +63,4 @@
       environment:
         PYTHOPATH: null
         VIRTUAL_ENV: "{{ galaxy_venv_dir }}"
+      become_user: "{{ galaxy_user_name }}"
